<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name">Traductor Duxman BW</string>

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>
    <string name="BTDeviceName">Device Name</string>
    <string name="BTDeviceDir">00:00:00:00:00:00</string>
    <string name="BTDeviceIcon">BT Icon</string>
    <string name="ConectionBLUEName">Conexion Bluetooth</string>
    <string name="ConectionNETName">Conexion Network</string>
    <string name="Conectar_BT">Conectar Bluetooth</string>
    <string name="Conectar_net">Conectar Net</string>
    <string name="DirIP">Direccion IP</string>
    <string name="Port">Puerto</string>
    <string name="cadena_vacia">" "</string>
    <string name="Cancelar">Canelar</string>
    
    <!-- Options Menu -->
    <string name="btnOn">ON</string>
    <string name="btnOff">OFF</string>
    <string name="btnALlOn">ALL ON</string>
    <string name="btnAllOff">ALL OFF</string>
    <string name="btnSaludo">HELLO</string>
    <string name="btnQuit">QUIT</string>
    <string name="btnSetPhone">SET PHONE</string>
    <string name="btnSms">SMS</string>
    <string name="btnSound">SOUND</string>
    <string name="BotonArriba">Adelante</string>
    <string name="BotonAtras">Atras</string>
    <string name="BotonIzquierda">Izquierda</string>
    <string name="BotonDerecha">Derecha</string>
    <string name="botonStop">Stop</string>
    <string name="location">"[X,Y] "</string>
    <string name="automatico">Conduccion Automatica</string>
    
</resources>
