<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/labeltextoIp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="22dp"
        android:text="@string/DirIP"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/textoIp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/labeltextoIp"
        android:ems="10"
        android:text="@string/cadena_vacia" 
        android:hint="@string/DirIP">

        <requestFocus />
        
    </EditText>
    
       <TextView
           android:id="@+id/labeltextoPort"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentLeft="true"
           android:layout_alignParentTop="true"
           android:layout_marginTop="60dp"
           android:text="@string/Port"
           android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/textoport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textoIp"
        android:layout_toRightOf="@id/labeltextoIp"
        android:ems="10"
        android:hint="@string/Port"
        android:text="@string/cadena_vacia" >

        <requestFocus />
    </EditText>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btnConectar"
            android:layout_alignBottom="@+id/btnConectar"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="128dp"
            android:text="@string/Cancelar" />

        <Button
            android:id="@+id/btnConectar"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textoport"
            android:layout_marginRight="10dp"
            android:layout_marginTop="128dp"
            android:text="@string/Conectar_net" />
    
</RelativeLayout>
</LinearLayout>