<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/BTDeviceIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/BTDeviceIcon"
        android:src="@drawable/icon" />

    <TextView
        android:id="@+id/TextBTDeviceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/BTDeviceIcon"
        android:text="@string/BTDeviceName"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/TextBtDeviceDir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextBTDeviceName"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/TextBTDeviceName"
        android:text="@string/BTDeviceDir"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
